--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,18 +29,12 @@
 <body>
 <div id="SnackbarCont"></div>
 <div class="Overlay">
-  <!-- <div class="OverlayClose"></div> -->
-  <div class="OverlayCityContainer">
-    <div class="OverlayCity">
-      <p class="HeadingMedium">Seattle,<Br> your elected representatives.</p>
-    </div>
-    <!-- <div class="op50 OverlayCityClear">
-      Clear
-    </div> -->
+  <div class="OverlayClose"></div>
+  <div class="OverlayCity HeadingMedium">
+    Seattle,<Br> your elected representatives.
   </div>
   <div class="OverlayContent">
     <div class="OfficialRoster"></div>
-    <div class="RosterBottomDivider"></div>
     <div class="ShareContainer">
       <h2 class="HeadingMedium">
         Share this?
