--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
   </div>
   <div class="OverlayContent">
     <div class="OfficialRoster"></div>
-    <div class="ShareContainer">
+    <!-- <div class="ShareContainer">
       <h2 class="HeadingMedium">
         Share this?
       </h2>
@@ -45,13 +45,13 @@
           Copy link
         </button>
       </div>
-    </div>
-    <p class="OverlaySiteCredit">
+    </div> -->
+    <!-- <p class="OverlaySiteCredit">
       Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
       <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
       <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
       </a>
-    </p>
+    </p> -->
     </div>
   </div>
 
