adjusted spacing on overlay site credit

--- a/public/master.css
+++ b/public/master.css
@@ -869,12 +869,12 @@ input {
   padding: 0 1rem;
 }
 .OverlaySiteCredit {
-  margin: 64px 0 64px 64px;
+  margin: 24px;
   font-size: 1.3rem;
 }
 @media (min-width: 62em) {
   .OverlaySiteCredit {
-    margin-left: 6rem;
+    margin: 64px;
   }
 }
 .HeroImgContainer {
