--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -224,11 +224,11 @@ input {
   padding: 0 1rem;
 }
 .OverlaySiteCredit {
-  margin: unit8 0 unit8 unit8;
+  margin: unit3;
   font-size: 1.3rem;
 }
 @media laptop {
   .OverlaySiteCredit {
-    margin-left: 6rem;
+    margin: unit8;
   }
 }
