--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -232,6 +232,7 @@ input {
   .OverlaySiteCredit {
     margin: unit8;
   }
+}
 .OverlayImgGitHub {
   height: 18px;
   width: 18px;
@@ -245,5 +246,4 @@ input {
   .OverlayImgGitHub {
     margin: 0 0 0 29rem;
   }
-
 }
