--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <h1 class="HeadingLarge WhiteText">
     Do you know who represents you?
   </h1>
-  <form id="zipForm">
+  <form id="zipForm" class="EnterZip">
     <label class="WhiteText">
       Enter your zip code
     </label>
@@ -14,10 +14,7 @@
     <input type="submit" value="Go" class="SubmitZip">
   </form>
   <p class="SiteCredit">
-    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
-    <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
-    <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
-    </a>
+    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
   </p>
 </div>
 
