removed cat from overlay

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -48,10 +48,7 @@
     </div>
   </div>
   <p class="OverlaySiteCredit">
-    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
-    <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
-    <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
-    </a>
+    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
   </p>
   </div>
 </div>
