--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,10 +28,12 @@
 </head>
 <body>
 <div id="SnackbarCont"></div>
+<div id="ImgLoader"></div>
 <div class="Overlay">
   <div class="OverlayClose"></div>
   <div class="OverlayCity HeadingMedium">
-    <span id="OverlayCityName"></span>,<Br> your elected representatives.
+    <span id="OverlayCityName"></span>,<br>
+    your elected representatives.
   </div>
   <div class="OverlayContent">
     <div class="OfficialRoster"></div>
@@ -41,16 +43,12 @@
       Share this?
     </h2>
     <div class="ShareModule">
-      <input type="text" value="http://who-represents.me" class="InputShare">
-      <button class="BtnShare">
-        Copy link
-      </button>
+      <input class="InputShare" type="text" value="http://who-represents.me"> <button class="BtnShare">Copy link</button>
     </div>
   </div>
   <p class="OverlaySiteCredit">
     Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
   </p>
-  </div>
 </div>
 
 <div class="OverlayScrim"></div>
