--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       Enter your zip code
     </label>
     <input type="tel" name="zip" id="zipInput" value="98144" class="InputZip">
-    <input type="submit" value="Go" class="SubmitZip">
+    <input type="submit" value="GO" class="SubmitZip">
   </form>
   <p class="SiteCredit">
     Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
