--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -39,11 +39,12 @@ h1,h2,h3,h4,h5,h6 {
   margin: 7rem 0 0 0;
   font-size: 13vw;
   width: 85%;
+	opacity: 0;
 }
 @media laptop {
   .HeadingLarge {
     width: 50%;
-    font-size: 4.5vw;
+    font-size: 4.2vw;
   }
 }
 .HeadingMedium {
@@ -118,4 +119,8 @@ button.filled, button:hover, .submitButton:hover {
 	background-repeat: no-repeat;
 	background-size: 11px;
 	background-position: 9px 8px;
+}
+.typed-cursor {
+	display: none;
+	opacity: 0;
 }
