--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <label class="WhiteText">
       Enter your zip code
     </label>
-    <input type="tel" name="zip" id="zipInput" value="98144" class="InputZip">
+    <input type="tel" name="zip" id="zipInput" value="" class="InputZip">
     <input type="submit" value="GO" class="SubmitZip">
   </form>
   <p class="SiteCredit">
