--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -39,6 +39,7 @@
   height:18px;
   width: 26px;
   position: relative;
+  opacity: 0;
 }
 label {
   display: block;
@@ -52,6 +53,7 @@ label {
 }
 .EnterZip {
   margin: unit8 0;
+  opacity: 0;
 }
 .InputZip {
   margin: 0 2rem 0 0;
@@ -71,6 +73,7 @@ label {
   height: 3.5rem;
   width: 6.5rem;
   font-size: 1.5rem;
+  cursor: pointer;
 }
 .LandingPageQuote {
   margin: 10rem 4rem 0 4rem;
@@ -84,6 +87,8 @@ label {
 .SiteCredit {
   font-size: 1.3rem;
   margin-top: unit4;
+  margin-bottom: -1em;
+  opacity: 0;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
