--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -155,7 +155,7 @@ label.error {
   box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.2);
 }
 .Snackbar.TypeNotif {
-  background-image: linear-gradient(101deg, #ff6100, #ff000d 47%, #500072);
+  background-image: none;
   background-color: black;
 }
 .Snackbar.TypeConf {
