functioning clipboard copy

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -271,11 +271,13 @@ input {
   margin: unit3;
   margin-bottom: 30%;
   font-size: 1.3rem;
+  line-height: 250%;
   opacity: 0;
 }
 @media laptop {
   .OverlaySiteCredit {
     margin: unit8;
+    line-height: 140%;
   }
 }
 .OverlayImgGitHub {
