--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,7 +43,8 @@
       Share this?
     </h2>
     <div class="ShareModule">
-      <input class="InputShare" type="text" value="http://who-represents.me"> <button class="BtnShare">Copy link</button>
+      <input class="InputShare" id="shareUrl" type="text" value="http://who-represents.me">
+      <button class="BtnShare" data-clipboard-action="copy" data-clipboard-target="#shareUrl">Copy link</button>
     </div>
   </div>
   <p class="OverlaySiteCredit">
