added social share meta

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,18 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
   <link href="/master.css" rel="stylesheet">
+  <!-- Facebook Open Graph Tags -->
+  <meta property="og:URL" content="http://amirepresented.com/" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Do you know who represents you?" />
+  <meta property="og:description" content="Enter your zip. See who's elected to represent your interests in Washington." />
+  <meta property="og:image" content="http://amirepresented.com/_img/fbshare.jpg" />
+  <!-- Twitter Sharing Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@amirepresented">
+  <meta name="twitter:title" content="Do you know who represents you?">
+  <meta name="twitter:description" content="Enter your zip. See who's elected to represent your interests in Washington.">
+  <meta name="twitter:image" content="http://amirepresented.com/_img/fbshare.jpg">
   <!-- favicons -->
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta name="apple-mobile-web-app-capable" content="yes">
