--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <input type="submit" value="GO" class="SubmitZip">
   </form>
   <p class="SiteCredit">
-    Built by <a href="http://jeremypbeasley.com" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. <br class="ShowMobile">See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
+    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. <br class="ShowMobile">See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
   </p>
 </div>
 
