--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,21 @@
 <% include partials/header %>
-
-<div class="HeroImgContainer"></div>
-<div class="ContentContainer">
-  <div class="TinyLogo"></div>
-  <h1 class="HeadingLarge WhiteText">
-    Do you know who represents you?
-  </h1>
-  <form id="zipForm" class="EnterZip">
-    <label class="WhiteText">
-      Enter your zip code
-    </label>
-    <input type="tel" name="zip" id="zipInput" value="" class="InputZip">
-    <input type="submit" value="GO" class="SubmitZip">
-  </form>
-  <p class="SiteCredit">
-    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. <br class="ShowMobile">See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
-  </p>
+<div class="LandingPageContainer">
+  <div class="HeroImgContainer"></div>
+  <div class="ContentContainer">
+    <div class="TinyLogo"></div>
+    <h1 class="HeadingLarge WhiteText">
+      Do you know who represents you?
+    </h1>
+    <form id="zipForm" class="EnterZip">
+      <label class="WhiteText">
+        Enter your zip code
+      </label>
+      <input type="tel" name="zip" id="zipInput" value="" class="InputZip">
+      <input type="submit" value="GO" class="SubmitZip">
+    </form>
+    <p class="SiteCredit">
+      Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>. <br class="ShowMobile">See it on <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank"><span class="BlackText BorderBottomBlack">Github</span></a>.
+    </p>
+  </div>
 </div>
-
 <% include partials/footer %>
