fixed HeadingLarge breaks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,13 @@
   <div class="ContentContainer">
     <div class="TinyLogo"></div>
     <h1 class="HeadingLarge WhiteText">
-      Do you know who represents you?
+      Do you
+      <br>
+      know who
+      <br>
+      represents
+      <br>
+      you?
     </h1>
     <form id="zipForm" class="EnterZip">
       <label class="WhiteText">
