changed url in share module

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,7 +55,7 @@
       Share this?
     </h2>
     <div class="ShareModule">
-      <input class="InputShare" id="shareUrl" type="text" value="http://who-represents.me">
+      <input class="InputShare" id="shareUrl" type="text" value="http://amirepresented.com">
       <button class="BtnShare" data-clipboard-action="copy" data-clipboard-target="#shareUrl">Copy link</button>
     </div>
   </div>
