--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,11 +6,11 @@
   <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
   <link href="/master.css" rel="stylesheet">
   <!-- Facebook Open Graph Tags -->
-  <meta property="og:URL" content="http://amirepresented.com/" />
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="Do you know who represents you?" />
-  <meta property="og:description" content="Enter your zip. See who's elected to represent your interests in Washington." />
-  <meta property="og:image" content="http://amirepresented.com/_img/fbshare.jpg" />
+  <meta property="og:URL" content="http://amirepresented.com/">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Do you know who represents you?">
+  <meta property="og:description" content="Enter your zip. See who's elected to represent your interests in Washington.">
+  <meta property="og:image" content="http://amirepresented.com/_img/fbshare.jpg">
   <!-- Twitter Sharing Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@amirepresented">
@@ -18,26 +18,26 @@
   <meta name="twitter:description" content="Enter your zip. See who's elected to represent your interests in Washington.">
   <meta name="twitter:image" content="http://amirepresented.com/_img/fbshare.jpg">
   <!-- favicons -->
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
-<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
-<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
-<meta name="application-name" content="&nbsp;"/>
-<meta name="msapplication-TileColor" content="#FFFFFF" />
-<meta name="msapplication-TileImage" content="mstile-144x144.png">
-<meta name="msapplication-square70x70logo" content="mstile-70x70.png">
-<meta name="msapplication-square150x150logo" content="mstile-150x150.png">
-<meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
-<meta name="msapplication-square310x310logo" content="mstile-310x310.png">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png">
+  <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196">
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128">
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="mstile-144x144.png">
+  <meta name="msapplication-square70x70logo" content="mstile-70x70.png">
+  <meta name="msapplication-square150x150logo" content="mstile-150x150.png">
+  <meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
+  <meta name="msapplication-square310x310logo" content="mstile-310x310.png">
 </head>
 <body>
 <div id="SnackbarCont"></div>
